--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DocumentFormat.OpenXml" version="2.11.3" targetFramework="net472" />
-  <package id="IronXL.Excel" version="2020.12.2" targetFramework="net472" />
+  <package id="FreeSpire.XLS" version="10.10.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
   <package id="SpreadsheetLight" version="3.5.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="5.0.0" targetFramework="net472" />
